<resources>
  <string name="app_name">JunkMan</string>
  <string name="splash_screen">Splash Screen</string>

  <string name="app_intro_skip_button">Lewati</string>
  <string name="app_intro_next_button">Lanjut</string>
  <string name="app_intro_back_button">Kembali</string>
  <string name="app_intro_done_button">Selesai</string>
  <string name="app_intro_image_content_description">Icon</string>

  <string name="title">JunkMan</string>
  <string name="desc1">Kamu punya barang bekas yang menumpuk dan ingin menjualnya?</string>
  <string name="desc2">Silahkan scan barang bekas anda dan tunggu JunkMan kami datang!</string>
  <string name="desc3">Anda juga dapat membeli barang bekas yang anda butuhkan pada toko kami</string>
  <string name="desc4">Selamat Datang di JunkMan! Solusi Barang Bekas mu!</string>
  <string name="welcome">Welcome!</string>

  <string name="card">Card Slider</string>
  <string name="card1">One Man\'s Trash is Another Man\'s Treasure.</string>
  <string name="card2">Recycling Turns Things Into Other Things. Which is Like Magic!</string>
  <string name="card3">Use It Up, Wear It Out, Make It Do, or Do Without.</string>

  <string name="monthly_reward">Monthly Reward</string>
  <string name="monthly_text">Yuk, selesaikan misimu untuk mendapatkan reward bulan ini!</string>
  <string name="max_value">10 Kg</string>
  <string name="min_value">2 Kg</string>
  <string name="txt_value">Value</string>

  <string name="google_maps_key">AIzaSyDxIwCaq5xHjX4WVHFtpGIFZOHKXx_Xu4w</string>

  <string name="list_title">List Transaksi</string>
  <string name="sell">Penjualan</string>
  <string name="buy">Pembelian</string>
  <string name="ic_eye">Icon Eye</string>
  <string name="show_barcode">Lihat Barcode</string>
  <string name="status">Status</string>
  <string name="status_wait">Menunggu</string>
  <string name="status_progress">Dikonfirmasi</string>
  <string name="status_done">Sukses</string>
  <string name="status_failed">Batal</string>

  <string name="open_barcode">Lihat Barcode</string>
  <string name="barcode">Tunjukkan barcode dibawah ini ke JunkMan, yaa!</string>
  <string name="txt_cancel_order">Berubah pikiran?</string>
  <string name="btn_cancel_order">Batalkan Pesanan</string>
  <string name="image">Image / Icon</string>

  <string name="title_buying">Deskripsi Pesanan</string>
  <string name="name_stuff">Nama Barang:</string>
  <string name="txt_name_Stuff">Botol Plastik</string>
  <string name="code_stuff">Kode Pesanan:</string>
  <string name="txt_code_stuff">BP0101</string>
  <string name="price_stuff">Total Harga:</string>
  <string name="price_stuff_rp">Rp</string>
  <string name="txt_price_stuff">5.000</string>

  <string name="txt_name_user">Name</string>
  <string name="txt_username">username</string>
  <string name="edit_profil">Edit Profil</string>
  <string name="history_trans">Riwayat Keuangan</string>
  <string name="withdraw">Tarik Tunai</string>
  <string name="logout">Logout</string>
  <string name="input_name">Masukkan Nama</string>
  <string name="input_address">Masukkan Alamat</string>
  <string name="save">Simpan</string>
  <string name="address">Alamat</string>
  <string name="saldo">SALDO</string>
  <string name="type_trans_income">Pemasukan</string>
  <string name="type_trans_outcome">Pengeluaran</string>
  <string name="trans_date">20/05/2021</string>
  <string name="amount_trans">Pilih Jumlah Penarikan :</string>
  <string name="amount_trans_50">Rp 50.000</string>
  <string name="amount_trans_100">Rp 100.000</string>
  <string name="amount_trans_200">Rp 200.000</string>
  <string name="bank_name">Nama Bank</string>
  <string name="input_bank_name">Masukkan Nama Bank</string>
  <string name="account_name">Nama Akun</string>
  <string name="input_account_name">Masukkan Nama Akun</string>
  <string name="account_number">No. Rekening</string>
  <string name="input_account_number">Masukkan No. Rekening</string>
  <string name="send">Ambil</string>

  <string name="amount_withdraw">Jumlah Penarikan</string>
  <string name="amount_admin">Biaya Administrasi</string>
  <string name="amount_admin_5">Rp 5.000</string>
  <string name="amount_total">Total Biaya</string>
  <string name="amount_total_55">Rp 55.000</string>
  <string name="confirm">Konfirmasi</string>

  <string name="floating_button">floating button</string>
  <string name="stuff_price_kg">Rp 5.000/Kg</string>
  <string name="price">Harga</string>
  <string name="stuff_weight_bottle">300ml</string>
  <string name="button">button</string>
  <string name="order">PESAN</string>
  <string name="price_weight">Harga/Kg</string>
  <string name="txt_stuff_quantity">2</string>
  <string name="shopping_cart">Keranjang Belanja</string>
  <string name="note_bottom_cart">*Transaksi dilakukan dengan COD</string>
  <string name="amount_cart">Jumlah Pembelian</string>

  <string name="name_stuff_doesnt_match">Jika nama barang yang tampil tidak sesuai, silahkan masukkan nama barang di bawah ini :</string>
  <string name="equal">:</string>
  <string name="kg">Kg</string>
  <string name="est_price">Estimasi Pendapatan</string>
  <string name="weight_predict">Estimasi Berat (per Kg)</string>
  <string name="price_stuff_info">Informasi Harga (per Kg)</string>
  <string name="title_junkman">Junkman</string>

  <string name="wrong_category">Wrong Category?</string>
  <string name="gallery">Gallery</string>
  <string name="next">Lanjut</string>
  <string name="initial_price">Rp0</string>
  <string name="name_product">Nama Produk</string>
  <string name="categori">Kategori</string>
  <string name="cancel">Batal</string>

</resources>