<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.list.buying.BottomDialogBuyingFragment"
  android:orientation="vertical"
  android:gravity="bottom">

  <ImageButton
    android:id="@+id/btn_close_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:src="@drawable/ic_close"
    android:backgroundTint="@color/white"
    android:contentDescription="@string/image" />

  <TextView
    android:id="@+id/txt_order"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="16sp"
    android:textStyle="bold"
    android:layout_centerHorizontal="true"
    android:padding="16dp"
    android:text="@string/title_buying"
    android:layout_below="@id/btn_close_dialog"/>

  <!--    =============================================================================-->
  <TextView
    android:id="@+id/name_stuff"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/name_stuff"
    android:textSize="16sp"
    android:textStyle="bold"
    android:padding="8dp"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/txt_order"
    android:layout_marginStart="16dp"/>

  <TextView
    android:id="@+id/txt_name_stuff"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txt_name_Stuff"
    android:textSize="16sp"
    android:padding="8dp"
    android:layout_toEndOf="@id/code_stuff"
    android:layout_below="@+id/txt_order" />

  <TextView
    android:id="@+id/code_stuff"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/code_stuff"
    android:textSize="16sp"
    android:textStyle="bold"
    android:padding="8dp"
    android:layout_alignParentStart="true"
    android:layout_marginStart="16dp"
    android:layout_below="@id/name_stuff"/>

  <TextView
    android:id="@+id/txt_code_stuff"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txt_code_stuff"
    android:textSize="16sp"
    android:padding="8dp"
    android:layout_toEndOf="@id/code_stuff"
    android:layout_below="@id/txt_name_stuff"/>

  <TextView
    android:id="@+id/price_stuff"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/price_stuff"
    android:textSize="16sp"
    android:textStyle="bold"
    android:padding="8dp"
    android:layout_alignParentStart="true"
    android:layout_marginStart="16dp"
    android:layout_below="@id/code_stuff"/>

  <TextView
    android:id="@+id/txt_price_rp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/price_stuff_rp"
    android:textSize="16sp"
    android:padding="8dp"
    android:layout_toEndOf="@id/code_stuff"
    android:layout_below="@id/code_stuff"/>

  <TextView
    android:id="@+id/txt_price_stuff"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txt_price_stuff"
    android:textSize="16sp"
    android:padding="8dp"
    android:layout_toEndOf="@id/txt_price_rp"
    android:layout_below="@id/code_stuff"/>
  <!--    =============================================================================-->

  <TextView
    android:id="@+id/txt_cancel_buying"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txt_cancel_order"
    android:textSize="16sp"
    android:textStyle="bold"
    android:padding="12dp"
    android:layout_marginBottom="24dp"
    android:layout_marginStart="16dp"
    android:layout_below="@id/price_stuff"/>

  <Button
    android:id="@+id/btn_cancel_buying"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignTop="@id/txt_cancel_buying"
    android:layout_alignBottom="@id/txt_cancel_buying"
    android:layout_alignParentEnd="true"
    android:layout_toEndOf="@+id/txt_cancel_buying"
    android:layout_marginEnd="16dp"
    android:text="@string/btn_cancel_order"
    android:textSize="12sp"/>

</RelativeLayout>