<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.profile.editprofile.EditProfileActivity">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
      android:id="@+id/img_profile"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_marginTop="50dp"
      app:civ_border_color="@color/green_500"
      app:civ_border_width="5dp"
      android:layout_centerHorizontal="true"
      android:src="@drawable/ic_baseline_person_24"
      app:layout_constraintVertical_bias="0.0" />

    <TextView
      android:id="@+id/txt_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/img_profile"
      android:layout_marginTop="16dp"
      android:text="@string/txt_name_user"
      android:textStyle="bold"
      android:textSize="18sp"
      android:gravity="center_horizontal"/>

    <TextView
      android:id="@+id/txt_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/txt_name"
      android:text="@string/txt_username"
      android:textSize="16sp"
      android:gravity="center_horizontal"/>

    <TextView
      android:id="@+id/edit_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/txt_username"
      android:layout_marginTop="50dp"
      android:layout_marginStart="20dp"
      android:text="@string/txt_name_user"
      android:textSize="16sp"
      android:textStyle="bold" />

    <EditText
      android:id="@+id/txt_edit_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      android:imeOptions="actionDone"
      android:layout_below="@id/edit_name"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:textSize="16sp"
      android:autofillHints="@string/input_name"
      android:labelFor="@id/txt_edit_name"/>

    <TextView
      android:id="@+id/edit_address"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/txt_edit_name"
      android:layout_marginTop="20dp"
      android:layout_marginStart="20dp"
      android:text="@string/address"
      android:textSize="16sp"
      android:textStyle="bold" />

    <EditText
      android:id="@+id/txt_edit_address"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      android:imeOptions="actionDone"
      android:layout_below="@id/edit_address"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:textSize="16sp"
      android:autofillHints="@string/input_address"
      android:labelFor="@id/txt_edit_address"/>

    <Button
      android:id="@+id/btn_logout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_centerHorizontal="true"
      android:layout_below="@id/txt_edit_address"
      android:layout_marginTop="50dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:text="@string/save"
      android:backgroundTint="@color/green_500"/>
  </RelativeLayout>
</ScrollView>